# egor-cpp

./: CMakeLists.txt  compile_commands.json  main.cpp
